# c3po

./: Cargo.toml  test.rs
example/: Cargo.toml
example/src/: main.rs
example/src/parsers/: ident.rs  mod.rs
parser_macro/: Cargo.toml  test.rs
parser_macro/src/: add.rs  bitand.rs  bitor.rs  clone.rs  common.rs  generic_container.rs  lib.rs  mul.rs
src/: lib.rs
src/ast/: mod.rs
src/ast/node/: node.rs
src/ast/parsers/: mod.rs
src/ast/regex/: regex.rs
src/ast/repeat/: repeat.rs
src/ast/string/: string.rs
src/immut_iter/: immut_iterable.rs  mod.rs
src/immut_iter/iterator/: from.rs  immut_iterator.rs  iterator.rs  mod.rs
src/lexer/: lexer.rs  mod.rs
src/lexer/lexeme/: lexeme.rs  mod.rs
src/lexer/literal_tree/: literal_tree.rs  mod.rs
src/lexer/pattern/: mod.rs  pattern.rs  regex.rs  string.rs
src/parser/: bitor.rs  clone.rs  mod.rs  parse.rs  parser.rs
src/parser/cursor/: add.rs  copy.rs  cursor.rs  eq.rs  immut_iterable.rs  mod.rs  partialord.rs
src/parser/output/: output.rs
src/parser/parse/: failedparse.rs  mod.rs  parse.rs  successfulparse.rs
src/parsers/: either.rs  mod.rs  string.rs
src/parsers/compose/: clone.rs  composeparser.rs  mod.rs  parser.rs
src/parsers/either/: clone.rs  eitherparser.rs  mod.rs  parser.rs
src/parsers/empty/: clone.rs  emptyparser.rs  mod.rs  parser.rs
src/parsers/many/: clone.rs  manyparser.rs  mod.rs  parser.rs
src/parsers/map/: clone.rs  map.rs  mapparser.rs  mod.rs  parser.rs
src/parsers/regex/: mod.rs  parser.rs  regexparser.rs
src/parsers/repeat/: clone.rs  mod.rs  mul.rs  parser.rs  (+1 more)
(+64 files in other folders)
