[package]
name = "c3po-parser-macro"
version = "0.1.0"
authors = ["Jonathan Lemos <jonathanlemos@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = { version = "1.0.76", features = ["full"] }